# 3D-Cellular-Automata-WGPU

./: README.md  TODO.md
cellular_automata/: Cargo.toml  index.html
cellular_automata/scripts/: script.js
cellular_automata/src/: compute.wgsl  lib.rs  main.rs  shader.wgsl  temp.rs  texture.rs
cellular_automata/styles/: style.css
run/pkg/: cellular_automata.js  cellular_automata_bg.wasm
web_build/: index.html
web_build/pkg/: cellular_automata.d.ts  cellular_automata.js  cellular_automata_bg.wasm  package.json
web_build/styles/: style.css
