[package]
name = "cellular_automata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
winit = "0.26"
env_logger = "0.9"
log = "0.4"
wgpu = "0.13"
pollster = "0.2"
bytemuck = { version = "1.4", features = [ "derive" ] }
cgmath = "0.18"
instant = "0.1"

glyph_brush = "0.7.3"
wgpu_text = "0.6.3"

futures-intrusive = "^0.4"
rand = "0.8.5" 
rayon = "1.5.3"